--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "E-Style",
   "version": "1.0.0",
-  "description": "Your Figma Plugin",
+  "description": "Update TextStyle",
   "main": "code.js",
   "scripts": {
     "build": "tsc -p tsconfig.json",
@@ -9,8 +9,8 @@
     "lint:fix": "eslint --ext .ts,.tsx --ignore-pattern node_modules --fix .",
     "watch": "npm run build -- --watch"
   },
-  "author": "",
-  "license": "",
+  "author": "Timur Yakshimbetov",
+  "license": "AGPL-3.0",
   "devDependencies": {
     "@figma/eslint-plugin-figma-plugins": "*",
     "@figma/plugin-typings": "*",
